--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "homepage": "https://github.com/toddmacintyre/speech_synthesis#readme",
   "dependencies": {
+    "angular-route": "^1.6.2",
     "body-parser": "^1.17.1",
     "express": "^4.15.2",
     "mongoose": "^4.8.6",
