--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
   },
   "homepage": "https://github.com/toddmacintyre/speech_synthesis#readme",
   "dependencies": {
+    "angular": "^1.6.2",
     "angular-route": "^1.6.2",
     "body-parser": "^1.17.1",
+    "cookie-parser": "^1.4.3",
     "express": "^4.15.2",
     "mongoose": "^4.8.6",
     "morgan": "^1.8.1"
