--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Text to speech synthesis with persistent data storage",
   "main": "server/server.js",
   "scripts": {
-    "start": "node index.js",
+    "start": "node server/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
